# pysvgview

./: README.md  README.rst  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
config/: project.py  python.py
doc/: TODO.txt
pysvgview/: configs.py  main.py  static.py  svg_view.py
pysvgview/endpoints/: group_default.py  main.py
src/pysvgview/: main.py  svg_view.py
