[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysvgview"
version = "0.0.5"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "pysvgview is an SVG viewer"
readme = "README.md"
license = "MIT"
keywords=[
    "svg",
    "view",
    "qt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "PyQt6",
    "PySide6",
    "pytconf",
    "pylogconf",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pysvgview"
"Bug Tracker" = "https://github.com/veltzer/pysvgview/issues"
"Documentation" = "https://veltzer.github.io/pysvgview"
"Download" = "https://pypi.org/project/pysvgview/"
"Repository" = "https://github.com/veltzer/pysvgview"

[project.scripts]
pysvgview = "pysvgview.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pysvgview"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pysvgview/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]
